--- a/flaskapp/templates/report-visitors.html
+++ b/flaskapp/templates/report-visitors.html
@@ -112,7 +112,7 @@
             
                     <div class="card-body">
                         <table  id='all-visitoreport' 
-                        class=" display compact table table-responsive  table-bordered table-striped ">
+                        class=" display compact table table-bordered table-striped ">
                             <thead class="thead-light">
                                 <tr class="">
                                     
